config-root/namespaces/upsource/upsource/upsource-deploy.yaml
# Source: upsource/templates/upsource-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.version: 1.21.0 (992df58d8)
    wave.pusher.com/update-on-config-change: 'true'
  labels:
    io.kompose.service: upsource
    gitops.jenkins-x.io/pipeline: 'namespaces'
  name: upsource
  namespace: upsource
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: upsource
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.version: 1.21.0 (992df58d8)
      labels:
        io.kompose.service: upsource
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - image: jetbrains/upsource:2020.1.1815
          imagePullPolicy: ""
          name: upsource
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /opt/upsource/data
              name: data
            - mountPath: /opt/upsource/conf
              name: conf
            - mountPath: /opt/upsource/logs
              name: logs
            - mountPath: /opt/upsource/backups
              name: backups
            - mountPath: /opt/upsource/temp
              name: temp
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: conf
          persistentVolumeClaim:
            claimName: conf
        - name: logs
          persistentVolumeClaim:
            claimName: logs
        - name: backups
          persistentVolumeClaim:
            claimName: backups
        - name: temp
          persistentVolumeClaim:
            claimName: temp
status: {}
