config-root/namespaces/upsource/upsource/upsource-svc.yaml
# Source: upsource/templates/upsource-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: upsource
    gitops.jenkins-x.io/pipeline: 'namespaces'
  name: upsource
  namespace: upsource
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: upsource
status:
  loadBalancer: {}
