config-root/namespaces/upsource/upsource/upsource-ingress.yaml
# Source: upsource/templates/upsource-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: upsource
  namespace: upsource
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - host: upsource.dev.property.xyz
      http:
        paths:
          - backend:
              serviceName: upsource
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - upsource.dev.property.xyz
      secretName: "tls-dev-property-xyz-p"
